Fix test Application Add class and Interfaces: Address, Card, Customer, Currency, CheckoutClient, CustomerClient Improve ResponseWrapper class

--- a/tests/Application/templates/token.html.twig
+++ b/tests/Application/templates/token.html.twig
@@ -6,7 +6,8 @@
 <ul>
     <li>Token: {{accessToken.getToken()}}</li>
     <li>Type: {{accessToken.getType()}}</li>
-    <li>Type: {{accessToken.getExpiration()}}</li>
+    <li>Expiration: {{accessToken.getExpiration()}}</li>
+    <li>Expiration as Date: {{ accessToken.getExpiration()|date("d/m/Y h:i:s")}}</li>
     <li>Scope: {{dump(accessToken.getScope())}}</li>
 </ul>
 {% endblock %}
