--- a/tests/Application/templates/customerForm.html.twig
+++ b/tests/Application/templates/customerForm.html.twig
@@ -1,5 +1,6 @@
+{% form_theme form 'bootstrap_4_layout.html.twig' %}
 {% extends 'base.html.twig' %}
 {% block title %}New customer{% endblock %}
 {% block body %}
-
+{{ form(form) }}
 {% endblock %}
