payum integration sync

--- a/tests/Application/templates/index.html.twig
+++ b/tests/Application/templates/index.html.twig
@@ -13,5 +13,13 @@
 		<li>
 			<a href="{{ path('sumup_checkout') }}">Checkout</a>
 		</li>
+        <li>
+            Payum
+            <ul>
+                <li>
+                    <a href="{{ path('sumup_payum_payment') }}">Create Payment</a>
+                </li>
+            </ul>
+        </li>
 	</ul>
 {% endblock %}
