Partial payum integration

--- a/tests/Application/templates/index.html.twig
+++ b/tests/Application/templates/index.html.twig
@@ -2,17 +2,20 @@
 {% block title %}SumUp Test{% endblock %}
 
 {% block body %}
-	<h3> SumUp SDK Test App </h3>
-	<ul>
-		<li>
-			<a href="{{ authorization_url }}">SumUp Autorize</a>
-		</li>
-		<li>
-			<a href="{{ path('sumup_token') }}">Get Token</a>
-		</li>
-		<li>
-			<a href="{{ path('sumup_checkout') }}">Checkout</a>
-		</li>
+    <h3> SumUp SDK Test App </h3>
+    <ul>
+        <li>
+            <a href="{{ authorization_url }}">SumUp Autorize</a>
+        </li>
+        <li>
+            <a href="{{ path('sumup_token') }}">Get Token</a>
+        </li>
+        <li>
+            <a href="{{ path('sumup_checkout') }}">Checkout</a>
+        </li>
+        <li>
+            <a href="{{ path('sumup_transaction_history') }}">Transaction History</a>
+        </li>
         <li>
             Payum
             <ul>
@@ -21,5 +24,5 @@
                 </li>
             </ul>
         </li>
-	</ul>
+    </ul>
 {% endblock %}
