--- a/src/Payum/Resources/views/Action/authorize_card.html.twig
+++ b/src/Payum/Resources/views/Action/authorize_card.html.twig
@@ -3,6 +3,9 @@
 {% block payum_body %}
     {{ parent() }}
     <card></card>
+    <form id="sumup_transaction_form" method="post">
+        <input type="hidden" name="{{ checkout_id }}" id="sumup_transaction_data"/>
+    </form>
 {% endblock %}
 
 {% block payum_javascripts %}
@@ -11,10 +14,13 @@
     <script src="https://gateway.sumup.com/gateway/card.js"></script>
     <script>
         //render the form ui providing a configuration object
-        PaymentCard.mount({checkoutId: "{{ model.id }}"});
+        PaymentCard.mount({checkoutId: "{{ checkout_id }}"});
         //listen to checkout processing result and handle it
         PaymentCard.on('checkout:paymentResult', function (data) {
-            //TODO: handle the checkout result
+            var f = document.getElementById('sumup_transaction_form');
+            document.getElementById('sumup_transaction_data')
+                .value = JSON.stringify(data);
+            f.submit();
         })
     </script>
 
